[package]
name = "simple_kv"
version = "0.1.0"
authors = ["GITHUBear <1729307751@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.3.9"
failure = "0.1.6"
serde = "1.0.104"
serde_json = "1.0.46"
log = "0.4.8"
env_logger = "0.7.1"
sled = "0.31.0"
crossbeam = "0.7.3"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"